--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 *.dll
 *.so
 *.dylib
-etui
+charity-management-serv
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-charity-management-serv
+
+# Env variables
+.env
