--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -36,3 +36,7 @@
 [[constraint]]
   name = "github.com/subosito/gotenv"
   version = "1.1.1"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/astaxie/goorm"
