--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,7 @@ services:
     image: "postgres:10.4"
     env_file:
       - ".env"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     ports:
       - "${DB_PORT}:${DB_PORT}"
