--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.7"
 services:
   api:
     build: .
@@ -6,14 +6,11 @@ services:
       - "${PORT}:${PORT}"
     env_file:
       - ".env"
-    network_mode: "host"
-    depends_on:
-      - postgres
+    environment:
+      - DB_HOST=postgres
   postgres:
     image: "postgres:10.4"
     env_file:
       - ".env"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
-    ports:
-      - "${DB_PORT}:${DB_PORT}"
