--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,13 @@
+# Enforce SSL
+#
+# server {
+#   listen 80;
+#   server_name _;
+#   if ($http_x_forwarded_proto = 'http'){
+#   return 301 https://$host$request_uri;
+#   }
+# }
+
 server {
   listen 80;
   listen [::]:80;
