--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - DB_HOST=postgres
   postgres:
-    image: "postgres:10.4"
+    image: "postgres:10-alpine"
     env_file:
       - ".env"
     volumes:
