put env vars to a file for docker to load

--- a/deployment/staging/nginx.conf
+++ b/deployment/staging/nginx.conf
@@ -12,7 +12,7 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name staking-testnet.wetrust.io;
+  server_name staking-staging.wetrust.io;
 
   location / {
     proxy_pass http://localhost:8000;
