--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - DATABASE_URL=postgres://postgres:@postgres:5432/cms_development?sslmode=disable
   postgres:
     image: "postgres:10-alpine"
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_DB=cms_development
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
