--- a/deployment/development/nginx.conf
+++ b/deployment/development/nginx.conf
@@ -9,7 +9,11 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name staking.wetrust.io, staking-staging.wetrust.io;
+  server_name staking.wetrust.io;
+
+  location / {
+    proxy_pass http://localhost:8000;
+  }
 
   location /api/v0 {
     proxy_pass http://api;
@@ -25,20 +29,18 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name staking.wetrust.io;
-
-  location / {
-    proxy_pass http://localhost:8000;
-  }
-}
-
-server {
-  listen 80;
-  listen [::]:80;
-
   server_name staking-staging.wetrust.io;
 
   location / {
     proxy_pass http://localhost:7999;
+  }
+
+  location /api/v0 {
+    proxy_pass http://api;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 }
